- Added the Gravel Beach biome. - Tall Oak Forest has been modernized - regular forest trees mixed in and coarse dirt blobs. - Code cleanup in material rules file.

--- a/src/main/resources/assets/biomesplusplus/lang/en_us.json
+++ b/src/main/resources/assets/biomesplusplus/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "itemgroup.biomesplusplus" : "Biomes++",
 
+  "biome.biomesplusplus.brushland": "Brushland",
   "biome.biomesplusplus.dark_swamp" : "Dark Swamp",
   "biome.biomesplusplus.deciduous_foothills" : "Deciduous Foothills",
   "biome.biomesplusplus.ender_forest" : "Ender Forest",
